compiler/tests/fa/errors/pure_vec_mut.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع پرکن(شمار : صحیح) : صحیح:
    متغیر مقدار := Vector {} بعنوان Vector<صحیح>
    مقدار.push(شمار)
    بازگشت مقدار.len()
پایان

تابع اصلی:
    چاپ(پرکن(3))
پایان
